<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".What is tools:context"
    android:layout_weight="1"
    android:gravity="bottom">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".3"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/game_welcome_msg"
        android:id="@+id/textView"
        android:focusableInTouchMode="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".4"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/enter_player1_name"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:gravity="top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/enter_player2_name"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:gravity="bottom" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".8">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:text="@string/default_name"
            android:id="@+id/player1name"
            android:textSize="30dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:text="@string/default_name2"
            android:id="@+id/player2name"
            android:textSize="30dp" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:id="@+id/start"
        android:layout_weight="1"
        android:textSize="24dp" />

</LinearLayout>